# collagify

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
src/collagify/: __init__.py  app.py  cli.py  collage.py
tests/: test_app.py  test_cli.py  test_collage.py
